[package]
name = "gguf"
version = "0.1.0"
description = "Parser and struct to handle GGUF files' header and metadata info"
edition = "2021"
license = "MIT"
authors = ["Jiayu Liu <jiayu@hey.com>"]
keywords = ["gguf", "parser", "metadata", "AI model"]
repository = "https://github.com/Jimexist/gguf"
homepage = "https://github.com/Jimexist/gguf"

[dependencies]
nom = { version = "7", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }

[features]
bin = ["serde_yaml"]

[[bin]]
name = "gguf-info"
required-features = ['bin']
